lib: [env] consolidate safe_getenv() usage
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/src/Makefile.am
+++ b/shlibs/mount/src/Makefile.am
@@ -18,7 +18,8 @@ libmount_la_SOURCES =	mountP.h version.c utils.c test.c init.c cache.c \
 			$(top_srcdir)/include/list.h \
 			$(top_srcdir)/lib/mangle.c \
 			$(top_srcdir)/lib/canonicalize.c \
-			$(top_srcdir)/lib/strutils.c
+			$(top_srcdir)/lib/strutils.c \
+			$(top_srcdir)/lib/env.c
 
 nodist_libmount_la_SOURCES = mountP.h
 
