libmount: add mount(8) sample
This code is going to be used as mount(8) replacement in the next
major release (2.20). For now this mount(8) implementation does not
support loopdevs initialization.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1185,6 +1185,7 @@ shlibs/mount/src/Makefile
 shlibs/mount/src/mount.h
 shlibs/mount/docs/Makefile
 shlibs/mount/docs/version.xml
+shlibs/mount/samples/Makefile
 shlibs/uuid/uuid.pc
 shlibs/uuid/Makefile
 shlibs/uuid/man/Makefile
