build-sys: link with socketlibs when necessary
To link an object which references socket functions, you need to link
with -lsocket -lnsl on Solaris.

Signed-off-by: Fabian Groffen <grobian@gentoo.org>

--- a/configure.ac
+++ b/configure.ac
@@ -211,6 +211,17 @@ AC_CHECK_MEMBER(struct sockaddr.sa_len,
 	[#include <sys/types.h>
 	 #include <sys/socket.h>])
 
+SOCKET_LIBS=
+AC_SEARCH_LIBS([gethostbyname], [nsl],
+	[if test x"$ac_cv_search_gethostbyname" != x"none required"; then
+		SOCKET_LIBS="$SOCKET_LIBS -lnsl";
+	 fi])
+AC_SEARCH_LIBS([socket], [socket],
+	[if test x"$ac_cv_search_socket" != x"none required"; then
+		SOCKET_LIBS="$SOCKET_LIBS -lsocket";
+	fi])
+AC_SUBST([SOCKET_LIBS])
+
 dnl Static compilation
 m4_define([UTIL_STATIC_PROGRAMS], [losetup, mount, umount, fdisk, sfdisk, blkid])
 
