build-sys: provide alternatives for err, errx, warn and warnx
Solaris lacks err, errx, warn and warnx.  This also means the err.h header
doesn't exist.  Removed err.h include from all files, and included err.h from
c.h instead if it exists, otherwise alternatives are provided.

Signed-off-by: Fabian Groffen <grobian@gentoo.org>

--- a/configure.ac
+++ b/configure.ac
@@ -175,6 +175,8 @@ AC_CHECK_DECL([lseek64],
 
 AC_CHECK_FUNCS(
 	[inet_aton \
+	err \
+	errx \
 	futimens \
 	fstat64 \
 	fsync \
@@ -204,6 +206,8 @@ AC_CHECK_FUNCS(
 	posix_fadvise \
 	getmntinfo \
 	__secure_getenv \
+	warn \
+	warnx \
 	rpmatch])
 AC_FUNC_FSEEKO
 
