libmount: cleanup high-level mount API
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/src/libmount.h.in
+++ b/shlibs/mount/src/libmount.h.in
@@ -416,7 +416,7 @@ extern int mnt_context_get_status(struct libmnt_context *cxt);
 extern int mnt_context_strerror(struct libmnt_context *cxt, char *buf,
 				size_t bufsiz);
 
-extern int mnt_mount_context(struct libmnt_context *cxt);
+extern int mnt_context_mount(struct libmnt_context *cxt);
 
 extern int mnt_context_prepare_mount(struct libmnt_context *cxt);
 extern int mnt_context_do_mount(struct libmnt_context *cxt);
