dmesg: use strtol_or_err instead of atoi
We shouldn't be accepting things like 'dmesg -n 2crapinput'
This patch also changes the exit's value to use EXIT_* constants.

Signed-off-by: Davidlohr Bueso <dave@gnu.org>

--- a/sys-utils/Makefile.am
+++ b/sys-utils/Makefile.am
@@ -29,6 +29,7 @@ cytune_SOURCES = cytune.c cyclades.h
 tunelp_SOURCES = tunelp.c lp.h
 fstrim_SOURCES = fstrim.c $(top_srcdir)/lib/strutils.c
 rtcwake_SOURCES = rtcwake.c $(top_srcdir)/lib/strutils.c
+dmesg_SOURCES = dmesg.c $(top_srcdir)/lib/strutils.c
 
 if BUILD_FALLOCATE
 usrbin_exec_PROGRAMS += fallocate
