--- a/text-utils/Makefile.am
+++ b/text-utils/Makefile.am
@@ -5,7 +5,7 @@ EXTRA_DIST = README.clear README.col
 usrbin_exec_PROGRAMS = col colcrt colrm column hexdump rev line tailf
 
 hexdump_SOURCES = hexdump.c conv.c display.c hexsyntax.c parse.c \
-		  hexdump.h
+		  hexdump.h $(top_srcdir)/lib/strutils.c
 
 dist_man_MANS = col.1 colcrt.1 colrm.1 column.1 hexdump.1 rev.1 line.1 tailf.1
 
