logger: support long options
Use getopt_long and usage output changed to match long options.
This patch will also scrutiny argument of formerly undocumented
-P option.

[kzak@redhat.com: - include c.h]

Signed-off-by: Sami Kerola <kerolasa@iki.fi>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/misc-utils/Makefile.am
+++ b/misc-utils/Makefile.am
@@ -10,6 +10,7 @@ usrbin_exec_PROGRAMS = cal ddate logger look mcookie namei whereis
 
 EXTRA_DIST += README.cal README.ddate README.namei README.namei2
 
+logger_SOURCES = logger.c $(top_srcdir)/lib/strutils.c
 mcookie_SOURCES = mcookie.c $(top_srcdir)/lib/md5.c
 
 usrbin_exec_SCRIPTS = chkdupexe
