build-sys: introduce AM_PROG_CC_C_O macro
Fix to warning which will appear when using fairly new automake
(automake commit id fd22dca).

disk-utils/Makefile.am:31: warning: compiling `mkswap.c' with per-target flags requires `AM_PROG_CC_C_O' in `configure.ac'

Reference documentation
http://www.gnu.org/software/hello/manual/automake/Public-Macros.html#index-AM_005fPROG_005fCC_005fC_005fO-296

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/configure.ac
+++ b/configure.ac
@@ -73,7 +73,7 @@ AC_SUBST([usrsbin_execdir])
 usrlib_execdir='${exec_prefix}/'$libdirname
 AC_SUBST([usrlib_execdir])
 
-
+AM_PROG_CC_C_O
 AC_PROG_CC_STDC
 AC_GNU_SOURCE
 AC_CANONICAL_HOST
