build-sys: fix unportable Makefile.am assignment
Makefile.am:36: warning: `:='-style assignments are not portable

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/Makefile.am
+++ b/Makefile.am
@@ -34,7 +34,7 @@ SUBDIRS = \
 	tests
 
 
-RCS_FIND_IGNORE := \( -name SCCS -o -name BitKeeper -o -name .svn -o \
+RCS_FIND_IGNORE = \( -name SCCS -o -name BitKeeper -o -name .svn -o \
 		-name CVS -o -name .pc -o -name .hg -o -name .git \) -prune -o
 
 if LINUX
