build-sys: print helpful error when pkg.m4 is missing
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/configure.ac
+++ b/configure.ac
@@ -84,6 +84,12 @@ AC_C_BIGENDIAN
 dnl libtool-2
 LT_INIT
 
+m4_ifndef([PKG_PROG_PKG_CONFIG],
+  [m4_fatal([Could not locate the pkg-config autoconf
+    macros. These are usually located in /usr/share/aclocal/pkg.m4.
+    If your macros are in a different location, try setting the
+    environment variable AL_OPTS="-I/other/macro/dir" before running
+    ./autogen.sh or autoreconf again.])])
 PKG_PROG_PKG_CONFIG
 
 GTK_DOC_CHECK([1.10])
