build-sys: add term-utils/
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1279,6 +1279,7 @@ shlibs/uuid/Makefile
 shlibs/uuid/man/Makefile
 shlibs/uuid/src/Makefile
 sys-utils/Makefile
+term-utils/Makefile
 tests/commands.sh
 tests/helpers/Makefile
 tests/Makefile
