build-sys: move agetty to term-utils
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/login-utils/Makefile.am
+++ b/login-utils/Makefile.am
@@ -6,16 +6,7 @@ sbin_PROGRAMS =
 usrsbin_exec_PROGRAMS =
 dist_man_MANS =
 
-EXTRA_DIST = README.getty  README.modems-with-agetty  README.poeigl
-
-if BUILD_AGETTY
-sbin_PROGRAMS += agetty
-dist_man_MANS += agetty.8
-agetty_SOURCES = agetty.c
-if !HAVE_LANGINFO
-agetty_SOURCES += $(top_srcdir)/lib/langinfo.c
-endif
-endif
+EXTRA_DIST = README.poeigl
 
 if BUILD_LAST
 usrbin_exec_PROGRAMS += last
